fixed double scrollbar bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,6 +181,7 @@ progress::-moz-progress-bar {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  overflow-x: hidden;
 }
 
 
